--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flashnote",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dimonarhipon.github.io/flashnote/",
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
